[project]
name = "siege-cli"
version = "1.0.2"
authors = [
    {name = "strawberry-p"}
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
description = "A CLI tool for interacting with HC's Siege website"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "argparse>=1.3.0",
    "beautifulsoup4>=4.10.2",
    "requests>=2.29.0",
]

[project.scripts]
siege-cli = "siege:package"
